--- a/Makefile-MM.def
+++ b/Makefile-MM.def
@@ -312,19 +312,18 @@ SHELL       = /bin/sh
 # | platform specific and typically order does matter!!     |
 # %---------------------------------------------------------%
 
-# Use scalapack from Homebrew
 SCALAPACK = YES
-SCALAPACK_INCLUDE =
+SCALAPACK_DIR = /opt/nesi/CS400_centos7_bdw/imkl/2020.0.166-gimpi-2020a/mkl/
+SCALAPACK_INCLUDE = $(SCALAPACK_DIR)/include
 SCALAPACK_FLAG = -D_SCALAP
-SCALAPACK_DIR =
-SCALAPACK_LIB = $(SCALAPACK_LIBRARIES)
+SCALAPACK_LIB = $(SCALAPACK_DIR)/lib/intel64_lin/
 
 # Use Mumps from Homebrew
 MUMPS = YES
 MUMPS_DIR = /opt/nesi/CS400_centos7_bdw/MUMPS/5.3.1-gimkl-2020a-METIS-5.1.0
 MUMPS_FLAG = -D_MUMPS -D_OPENMPI
 MUMPS_INCLUDE = -I$(MUMPS_DIR)/include
-MUMPS_LIB = -L$(MUMPS_DIR)/lib -ldmumps -lmumps_common -lpord
+MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64_lin/libmkl_scalapack.a
 
 
 MACHINE_LINKLIBS  =
@@ -353,7 +352,7 @@ METIS_PARA_DIR = /opt/nesi/CS400_centos7_bdw/METIS/5.1.0-GCCcore-9.2.0/
 
 PARALLEL_LIB = 	$(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSuperLU.o \
 	$(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.o \
-	$(DISTRIBUTED_SUPERLU_LIBRARY) $(MUMPS_LIB) $(SCALAPACK_LIB) $(METIS_PARA_DIR)/lib/libmetis.a \
+	$(DISTRIBUTED_SUPERLU_LIBRARY) $(MUMPS_LIB) $(METIS_PARA_DIR)/lib/libmetis.a \
 	-lmpi_mpifh -lmpi -lopen-rte -lopen-pal
 
 # %---------------------------------------------------------%
@@ -368,8 +367,7 @@ MACHINE_INCLUDES        = -I/usr/include \
 			  -I/usr/local/include \
 			  -I/usr/include/cxx \
               -I$(FE)/../OTHER/SuperLU_DIST_4.3/SRC \
-			  -I$(HOME)/include -I$(HOME)/blitz \
-			  $(MUMPS_INCLUDE) -I$(CUDA_DIR)/include \
+			  -I$(MUMPS_INCLUDE) -I$(SCALAPACK_INCLUDE) \
 			  -I$(METIS_PARA_DIR)include/
 
 # this file contains all the OpenSees/SRC includes
