--- a/Makefile-mahuika.def
+++ b/Makefile-mahuika.def
@@ -226,7 +226,7 @@ ifeq ($(DEBUG_MODE), DEBUG)
 C++FLAGS = -Wall -D_LINUX -D_UNIX  -D_TCL85  -D_AMDn \
 	       $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(MUMPS_FLAG) \
 	       $(PROGRAMMING_FLAG) -g -O3
-CFLAGS   = -Wall -O0 -g -DUSE_VENDOR_BLAS
+CFLAGS   = -Wall -O3 -g -DUSE_VENDOR_BLAS
 FFLAGS   = -Wall -O -DCUBLAS -x f77-cpp-input --no-second-underscore
 LINKFLAGS       = -g -pg
 
@@ -234,9 +234,9 @@ else
 ifeq ($(INTERPRETER_LANGUAGE), PYTHON)
 C++FLAGS         = -D_LINUX -D_UNIX  -D_TCL85 -D_AMDn -D_MACOSX \
 	$(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(MUMPS_FLAG) \
-	$(PROGRAMMING_FLAG) -g -O0 -fPIC
-CFLAGS          = -Wall -g -O0 -DUSE_VENDOR_BLAS -D_USE_METIS_5p1  -fPIC
-FFLAGS          = -Wall -g -O0 -fPIC
+	$(PROGRAMMING_FLAG) -g -O3 -fPIC
+CFLAGS          = -Wall -g -O3 -DUSE_VENDOR_BLAS -D_USE_METIS_5p1  -fPIC
+FFLAGS          = -Wall -g -O3 -fPIC
 
 # Linker
 LINKER          = $(CC++)
@@ -304,20 +304,21 @@ SHELL       = /bin/sh
 # %---------------------------------------------------------%
 
 SCALAPACK = YES
-SCALAPACK_DIR = /opt/nesi/CS400_centos7_bdw/imkl/2020.0.166-gimpi-2020a/mkl/
+SCALAPACK_DIR = $($EBROOTIMKL)/mkl/
 SCALAPACK_INCLUDE = $(SCALAPACK_DIR)/include
 SCALAPACK_FLAG = -D_SCALAP
 SCALAPACK_LIB = $(SCALAPACK_DIR)/lib/intel64_lin/
 
 # Use Mumps from Homebrew
 MUMPS = YES
-MUMPS_DIR = /opt/nesi/CS400_centos7_bdw/MUMPS/5.3.1-gimkl-2020a-METIS-5.1.0
+MUMPS_DIR = $($EBROOTMUMPS)
 MUMPS_FLAG = -D_MUMPS -D_OPENMPI
 MUMPS_INCLUDE = -I$(MUMPS_DIR)/include
 MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64_lin/libmkl_scalapack.a
 
 SCOTCH_LIBRARIES = -L$(EBROOTSCOTCH)/lib -lesmumps -lptscotch -lscotch -lscotcherr
 
+# the following tool can be used to figure out which MKL libraries to link against
 # https://www.intel.com/content/www/us/en/developer/tools/oneapi/onemkl-link-line-advisor.html
 MKL_LIBRARIES = -L$(EBROOTIMKL)/mkl/lib/intel64 -lmkl_scalapack_ilp64 \
                 -Wl,--no-as-needed -lmkl_gf_ilp64 -lmkl_sequential \
