--- a/Makefile-mahuika.def
+++ b/Makefile-mahuika.def
@@ -202,7 +202,7 @@ WIPE_LIBS = $(FE_LIBRARY) \
 
 # Compilers
 
-CC++  = mpic++ -std=c++14
+CC++  = mpicxx -std=c++14
 CC    = mpicc  -std=c18 -Wimplicit-function-declaration
 FC	  = mpif90
 
@@ -322,8 +322,7 @@ SCOTCH_LIBRARIES = -L$(EBROOTSCOTCH)/lib -lesmumps -lptscotch -lscotch -lscotche
 # the following tool can be used to figure out which MKL libraries to link against
 # https://www.intel.com/content/www/us/en/developer/tools/oneapi/onemkl-link-line-advisor.html
 MKL_LIBRARIES = -L$(EBROOTIMKL)/mkl/lib/intel64 -lmkl_scalapack_ilp64 \
-                -Wl,--no-as-needed -lmkl_gf_ilp64 -lmkl_sequential \
-                -lmkl_core -lmkl_blacs_intelmpi_ilp64
+                -Wl,--no-as-needed -lmkl_gf_ilp64 -lmkl_sequential -lmkl_core -lmkl_blacs_intelmpi_ilp64
 
 
 MACHINE_LINKLIBS  =
@@ -354,8 +353,7 @@ PARALLEL_LIB = 	$(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSuperLU.o \
 	$(FE)/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.o \
 	$(DISTRIBUTED_SUPERLU_LIBRARY) $(MUMPS_LIB) $(METIS_PARA_DIR)/lib/libmetis.a \
 	$(SCOTCH_LIBRARIES) $(MKL_LIBRARIES) \
-	-lm -lc -ldl -lgfortran \
-	-lmpi_mpifh -lmpi -lopen-rte -lopen-pal
+	-lm -lc -ldl -lgfortran 
 
 # %---------------------------------------------------------%
 # | SECTION 7: INCLUDE FILES                                |
