--- a/Makefile-mahuika.def
+++ b/Makefile-mahuika.def
@@ -314,7 +314,7 @@ SCALAPACK_LIB = $(SCALAPACK_DIR)/lib/intel64_lin/
 MUMPS = YES
 MUMPS_DIR = $(EBROOTMUMPS)
 MUMPS_FLAG = -D_MUMPS -D_OPENMPI
-MUMPS_INCLUDE = -I$(MUMPS_DIR)/include
+MUMPS_INCLUDE = $(MUMPS_DIR)/include
 MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64_lin/libmkl_scalapack.a
 
 SCOTCH_LIBRARIES = -L$(EBROOTSCOTCH)/lib -lesmumps -lptscotch -lscotch -lscotcherr
