--- a/Makefile-mahuika.def
+++ b/Makefile-mahuika.def
@@ -313,7 +313,7 @@ SCALAPACK_LIB = $(SCALAPACK_DIR)/lib/intel64_lin/
 # Use Mumps from Homebrew
 MUMPS = YES
 MUMPS_DIR = $(EBROOTMUMPS)
-MUMPS_FLAG = -D_MUMPS -D_OPENMPI
+MUMPS_FLAG = -D_MUMPS
 MUMPS_INCLUDE = $(MUMPS_DIR)/include
 MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64_lin/libmkl_scalapack.a
 
