--- a/Makefile-mahuika.def
+++ b/Makefile-mahuika.def
@@ -273,7 +273,7 @@ SHELL       = /bin/sh
 # %---------------------------------------------------------%
 
 SCALAPACK = YES
-SCALAPACK_DIR = $(EBROOTIMKL)/mkl
+SCALAPACK_DIR = $(EBROOTIMKL)/mkl/2022.0.2
 SCALAPACK_INCLUDE = $(SCALAPACK_DIR)/include
 SCALAPACK_FLAG = -D_SCALAP
 SCALAPACK_LIB = $(SCALAPACK_DIR)/lib/intel64_lin/
@@ -283,7 +283,7 @@ MUMPS = YES
 MUMPS_DIR = $(EBROOTMUMPS)
 MUMPS_FLAG = -D_MUMPS
 MUMPS_INCLUDE = $(MUMPS_DIR)/include
-MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64_lin/libmkl_scalapack.a
+MUMPS_LIB = -L$(MUMPS_DIR)/lib -L$(SCALAPACK_LIB) -ldmumps -lmumps_common -lpord -l$(SCALAPACK_DIR)/lib/intel64/libmkl_scalapack.a
 
 SCOTCH_LIBRARIES = -L$(EBROOTSCOTCH)/lib -lesmumps -lptscotch -lscotch -lscotcherr
 
